--- a/common/Dockerfile
+++ b/common/Dockerfile
@@ -3,10 +3,10 @@ FROM continuumio/miniconda3  AS build
 
 # Install conda-pack:
 RUN conda install -c conda-forge conda-pack
-RUN conda create --name hydra -c bioconda \
+RUN conda create --name hydra -c bioconda  -c conda-forge  \
 	bcftools=1.14-0 \
 	samtools=1.14-0 \
-	bedtools=1.14-0 \
+	bedtools=2.30 \
 	tabix=1.11-0 \
 	snakemake-wrapper-utils=0.2.0
 
@@ -29,7 +29,7 @@ FROM debian:buster-slim AS runtime
 LABEL VERSION=0.0.1
 LABEL bcftools=1.14-0
 LABEL samtools=1.14-0
-LABEL bedtools=1.14-0
+LABEL bedtools=2.30
 LABEL tabix=1.11-0
 LABEL snakemake-wrapper-utils=0.2.0
 ################## MAINTAINER ######################
