--- a/picard/Dockerfile
+++ b/picard/Dockerfile
@@ -3,7 +3,7 @@ FROM continuumio/miniconda3  AS build
 
 # Install conda-pack:
 RUN conda install -c conda-forge conda-pack
-RUN conda create --name hydra -c bioconda picard=2.25.0 python=3.9 snakemake-wrapper-utils=0.2.0
+RUN conda create --name hydra -c bioconda picard=2.25.0 r-base=3.6.2 python=3.9 snakemake-wrapper-utils=0.2.0
 
 # Use conda-pack to create a standalone enviornment
 # in /venv:
@@ -24,6 +24,7 @@ FROM debian:buster-slim AS runtime
 LABEL VERSION=2.25.0
 LABEL picard=2.25.0
 LABEL python=3.9
+LABEL r-base=3.6.2
 LABEL snakemake-wrapper-utils=0.2.0
 ################## MAINTAINER ######################
 MAINTAINER Patrik Smeds <patrik.smeds@scilifelab.uu.se>
