--- a/common/Dockerfile
+++ b/common/Dockerfile
@@ -9,6 +9,7 @@ RUN conda create --name hydra -c bioconda  -c conda-forge  \
 	bedtools=2.30 \
 	tabix=1.11 \
 	python=3.9 \
+	pysam=0.17.0 \
         snakemake-wrapper-utils=0.2.0
 
 RUN conda install -c conda-forge conda-pack
@@ -35,6 +36,7 @@ LABEL samtools=1.14
 LABEL bedtools=2.30
 LABEL tabix=1.11
 LABEL python=3.9
+LABEL pysam=0.17.0
 LABEL snakemake-wrapper-utils=0.2.0
 ################## MAINTAINER ######################
 MAINTAINER Patrik Smeds <patrik.smeds@scilifelab.uu.se>
