Style: Format Dockerfile a bit

--- a/cnvkit/Dockerfile
+++ b/cnvkit/Dockerfile
@@ -1,15 +1,19 @@
 # The build-stage image:
-FROM continuumio/miniconda3  AS build
+FROM continuumio/miniconda3 AS build
 
 # Install conda-pack:
 RUN conda install -c conda-forge conda-pack
-RUN conda create --name hydra -c bioconda -c conda-forge cnvkit=0.9.9 openssl=1.0 snakemake-wrapper-utils=0.2.0
+RUN conda create --name hydra -c bioconda -c conda-forge \
+    cnvkit=0.9.9 \
+	  python=3.9 \
+    snakemake-wrapper-utils=0.2.0
 
 # Use conda-pack to create a standalone enviornment
 # in /venv:
-RUN conda-pack -n hydra -o /tmp/env.tar && \
-  mkdir /venv && cd /venv && tar xf /tmp/env.tar && \
-  rm /tmp/env.tar
+RUN conda-pack -n hydra -o /tmp/env.tar
+WORKDIR /venv
+RUN tar xf /tmp/env.tar && \
+    rm /tmp/env.tar
 
 # We've put venv in same path it'll be in final image,
 # so now fix up paths:
@@ -32,4 +36,5 @@ MAINTAINER Patrik Smeds <patrik.smeds@scilifelab.uu.se>
 # to /usr/local to make it possible
 # running the softwares without activating
 # any conda env
+RUN rm -rf /usr/local/*
 COPY --from=build /venv /usr/local
