--- a/.github/workflows/hadolint.yaml
+++ b/.github/workflows/hadolint.yaml
@@ -15,4 +15,4 @@ jobs:
         name: Lint Dockerfile
         uses: hadolint/hadolint-action@v1.6.0
         with:
-          dockerfile: "*/Dockerfile"
+          dockerfile: "**/Dockerfile"
