--- a/.github/workflows/hadolint.yaml
+++ b/.github/workflows/hadolint.yaml
@@ -14,5 +14,6 @@ jobs:
       - 
         name: Lint Dockerfile
         uses: hadolint/hadolint-action@v1.6.0
+        recursive: true
         with:
-          dockerfile: "**/Dockerfile"
+          dockerfile: "Dockerfile"
