--- a/multiqc/Dockerfile
+++ b/multiqc/Dockerfile
@@ -1,11 +1,8 @@
 FROM python:3.8-slim
-
-RUN pip install multiqc==1.11 multiqc_cgs==0.2
+RUN pip install --no-cache-dir multiqc==1.11 multiqc_cgs==0.2
 
 ################## METADATA ######################
-LABEL VERSION=1.11
+LABEL maintainer="patrik.smeds@scilifelab.uu.se"
+LABEL version=1.11
 LABEL multiqc=1.11
-LABEL multiqc_cgs=0.2
-################## MAINTAINER ######################
-MAINTAINER Patrik Smeds <patrik.smeds@scilifelab.uu.se>
-
+LABEL multiqc-cgs=0.2
