--- a/snpeff/Dockerfile
+++ b/snpeff/Dockerfile
@@ -1,21 +1,19 @@
 # The build-stage image:
-FROM continuumio/miniconda3 AS build
+FROM continuumio/miniconda3:4.10.3 AS build
 
 # Install conda-pack:
-RUN conda install -c conda-forge conda-pack
-RUN conda create --name hydra -c bioconda  -c conda-forge  \
-	  snpeff=5.0 \
+RUN conda install -c conda-forge conda-pack && \
+    conda create --name hydra -c bioconda  -c conda-forge \
     bcftools=1.14 \
 	  python=3.9 \
-    snakemake-wrapper-utils=0.2.0
-RUN conda install -c conda-forge conda-pack
+    snakemake-wrapper-utils=0.2.0 \
+	  snpeff=5.0
 
 # Use conda-pack to create a standalone enviornment
 # in /venv:
 RUN conda-pack -n hydra -o /tmp/env.tar
 WORKDIR /venv
-RUN tar xf /tmp/env.tar && \
-    rm /tmp/env.tar
+RUN tar xf /tmp/env.tar
 
 # We've put venv in same path it'll be in final image,
 # so now fix up paths:
@@ -27,17 +25,15 @@ RUN /venv/bin/conda-unpack
 FROM debian:buster-slim AS runtime
 
 ################## METADATA ######################
-LABEL VERSION=5.0
-LABEL snpeff=5.0
+LABEL maintainer="martin.rippin@scilifelab.uu.se"
+LABEL version=5.0
 LABEL bcftools=1.14
 LABEL python=3.9
 LABEL snakemake-wrapper-utils=0.2.0
-################## MAINTAINER ######################
-MAINTAINER Martin Rippin <martin.rippin@scilifelab.uu.se>
+LABEL snpeff=5.0
 
 # Copy /venv from the previous stage:
 # to /usr/local to make it possible
 # running the softwares without activating
 # any conda env
-RUN rm -rf /usr/local/*
 COPY --from=build /venv /usr/local
