--- a/.github/workflows/dockerbuild.yaml
+++ b/.github/workflows/dockerbuild.yaml
@@ -36,7 +36,7 @@ jobs:
             IMAGE_ID=${{ secrets.DOCKER_REGISTRY_URL }}/${{ secrets.REPOSITORY }}/$IMAGE_NAME
             tmpName="image-$RANDOM"
             docker build $IMAGE_NAME --file $dockerFilePath --tag $tmpName
-            IMAGE_VERSION=$(grep "LABEL VERSION" $dockerFilePath | awk 'BEGIN{FS="\="}{print($2)}')
+            IMAGE_VERSION=$(grep "LABEL version" $dockerFilePath | awk 'BEGIN{FS="\="}{print($2)}')
             echo "IMAGE_NAME=$IMAGE_NAME"
             echo "IMAGE_VERSION=$IMAGE_VERSION"
             docker tag $tmpName $IMAGE_ID:$IMAGE_VERSION
