feat: Omit conda installation for fusioncatcher

--- a/fusioncatcher/Dockerfile
+++ b/fusioncatcher/Dockerfile
@@ -1,36 +1,20 @@
-# The build-stage image:
-FROM continuumio/miniconda3:4.10.3 AS build
-
-# Install conda-pack:
-RUN conda install -c conda-forge conda-pack && \
-    conda create --name hydra -c bioconda  -c conda-forge \
-	  fusioncatcher=1.33
-
-# Use conda-pack to create a standalone enviornment
-# in /venv:
-RUN conda-pack -n hydra -o /tmp/env.tar
-WORKDIR /venv
-RUN tar xf /tmp/env.tar
-
-# We've put venv in same path it'll be in final image,
-# so now fix up paths:
-RUN /venv/bin/conda-unpack
-
-# The runtime-stage image; we can use Debian as the
-# base image since the Conda env also includes Python
-# for us.
-FROM debian:buster-slim AS runtime
+FROM python:2.7.18-slim-buster
 
 ################## METADATA ######################
 LABEL maintainer="martin.rippin@scilifelab.uu.se"
 LABEL version=1.33
 LABEL fusioncatcher=1.33
 
+WORKDIR /opt
 RUN apt-get update && \
-    apt-get install --no-install-recommends -y libssl-dev=1.1.1n-0+deb10u1 libssl1.1=1.1.1n-0+deb10u1 procps=2:3.3.15-2 && \
-    rm -rf /var/lib/apt/lists/*
-# Copy /venv from the previous stage:
-# to /usr/local to make it possible
-# running the softwares without activating
-# any conda env
-COPY --from=build /venv /usr/local
+    apt-get install --no-install-recommends -y build-essential=12.6 \
+    ca-certificates=20200601~deb10u2 \
+    procps=2:3.3.15-2 \
+    wget=1.20.1-1.1 \
+    unzip=6.0-23+deb10u2 \
+    zlib1g-dev=1:1.2.11.dfsg-1+deb10u1 && \
+    rm -rf /var/lib/apt/lists/* && \
+    pip install --no-cache-dir numpy==1.16.6 && \
+    wget --no-check-certificate http://sf.net/projects/fusioncatcher/files/bootstrap.py -O bootstrap.py && \
+    python bootstrap.py -t -y && \
+    ln -s /opt/fusioncatcher/bin/fusioncatcher.py /usr/local/bin/fusioncatcher
